# ucarlos-computer-systems-solutions

./: Readme.org
Second Edition/: CMakeLists.txt
Second Edition/Chapter 2/: common_header.h
Second Edition/Chapter 2/Homework/: Bit Level Floating-Point Rules.txt  Homework2_58.c  Homework2_59.c  Homework2_59.txt  Homework2_60.c  Homework2_61.txt  Homework2_64.c  Homework2_68.c  Homework2_72.c  Homework2_74.c  Homework2_76.txt  Homework2_77.c  Homework2_78.c  Homework2_81.txt  Homework2_87.txt  Homework2_91.c  Homework2_91_Output.txt  Homework2_92.c  Homework2_92.s  Homework2_93.c  Inttobin.c  Problem2_13.c
Second Edition/Chapter 2/Practice/: Bit-level_Integer_Rules.org  Byte Representation.c  CHECK_MULTIPLICATION_CORRECTION.c  Chapter2_Functions.c  Decimal to Floating-Point Conversion.txt  Example2_14.c  Example2_15.c  Example2_2.c  Fast_InverseSqrt.c  Fast_InverseSqrt.s  Float_to_Binary.c  Homework2_59.c  Homework2_72.txt  Problem2_09.txt  Problem2_10.c  Problem2_10.txt  Problem2_11.c  Problem2_11.txt  Problem2_12.txt  Problem2_15.txt  Problem2_23.c  Problem2_25.c  Problem2_26.c  Problem2_27.c  Problem2_28.txt  Problem2_30.c  Problem2_30_3.c  Problem2_32.c  Problem2_35.txt  Problem2_36.c  Problem2_40.txt  Problem2_41.txt  Problem2_42.c  Problem2_43.c  Problem2_45.txt  Problem2_46.txt  Problem2_47.txt  Problem2_48.txt  Problem2_52.txt  Problem2_53.c  (+4 more)
Second Edition/Chapter 3/: problem.c
Second Edition/Chapter 3/Homework/: Problem3_54.c  Problem3_55.txt  Problem3_56.txt  Problem3_57.c  Problem3_58.c  Problem3_58.txt  Problem3_59.c  Problem3_59.txt  Problem3_61.c  (+6 more)
(+121 files in other folders)
